# openrowdb

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: macos-build.yml  release.yml  rust.yml  site.yml
apps/linux/: Cargo.toml  README.md
apps/linux/src/: main.rs
apps/mac/: Package.resolved  Package.swift  README.md
apps/mac/OpenrowDB/App/: ContentView.swift  EmptyStateView.swift  (+1 more)
apps/mac/Resources/: AppIcon.icns
apps/mac/release-notes/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
apps/mac/scripts/: deploy-site.sh  install.sh  make-app.sh  make-dmg.sh  make-icon.swift  make-icons.sh  make-zip.sh  notarize.sh  release.sh  run.sh  watch.sh
apps/mac/site/: index.html
apps/windows/: OpenrowDB.sln  README.md
apps/windows/OpenrowDB/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OpenrowDB.csproj  app.manifest
crates/openrowdb-core/: Cargo.toml  README.md
crates/openrowdb-core/src/: connection.rs  dialect.rs  error.rs  lib.rs  statement_splitter.rs
docs/: README.md
shared/: README.md
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/changelog/: index.html
web/public/shots/: README.md
web/src/: App.tsx  changelog-main.tsx  index.css
web/src/data/: features.ts  platforms.ts
web/src/lib/: parseChangelog.ts  useReducedMotion.ts
(+92 files in other folders)
